Changes for 4.0.5rc1

New features:
..F....... [ZBXNEXT-5046] added non-destructive resizing and reordering of dashboard widgets (ashubin, gcalenko, miks)
..FGI..PST [ZBXNEXT-401,ZBXNEXT-4907,ZBXNEXT-4955] added monitoring of internal metrics from an external Zabbix instance (vasilijs, viktors)

Bug fixes:
..F....... [ZBX-15664] fixed "Undefined index" errors on maps with enabled automatic icon mapping (Sasha)
....I..... [ZBX-15667] fixed wrong default Zabbix server status for new installation (kalimulin)
..F....... [ZBX-15512] fixed performance issues and significant memory consumption on several pages which contains host popup menus (Sasha)
..F....... [ZBX-15512] fixed performance issues in "Problems by severity" widget (talbergs)
.......PS. [ZBX-15593] fixed database upgrade patch to stop upgrade on commit failure (vso)
........S. [ZBX-15611] fixed crash in configuration syncer when there are groups with same name and when removing preprocessing steps from item (vso)
..F....... [ZBX-15242] fixed value trimming and duplicate catching in SVG graph pattern fields (miks)
..F....... [ZBX-15250] fixed selection box height calculation in classic graph (miks)
...G...... [ZBX-15316] fixed problem with socket inheritance preventing Windows agent from restarting under certain circumstances (kalimulin)
...G...PS. [ZBX-15379] fixed -Wimplicit-fallthrough warnings when compiling with GCC 7 and -Wextra (akozlovs)
A.F....... [ZBX-15179] fixed when message about blocking user login is displayed only on next login attempt (gcalenko, vasilijs)
...G....S. [ZBX-15494] fixed handling numbers that written in scientific notation (asitals)
........S. [ZBX-15533] fixed cutting and trimming event tags and values (asitals)
.......P.. [ZBX-15442] fixed reporting idle time in datasender's process state information (asitals)
..F....... [ZBX-15424] fixed when multiselect doesn't trim values and recognizes untrimmed values as new ones (vasilijs)