@@ -1460,13 +1460,23 @@ static int	am_db_flush_alert_updates(zbx_am_t *manager)
 	if (ZBX_DB_DOWN == zbx_db_begin())
 		goto cleanup;
 
-	for (i = 0; i < updates.values_num; i += 100)
+#if defined(HAVE_ORACLE) && 0 == ZBX_MAX_OVERFLOW_SQL_SIZE
+#	define ZBX_SQL_UPDATE_BATCH_SIZE	1
+#	define ZBX_SQL_DELIMITER
+#else
+#	define ZBX_SQL_UPDATE_BATCH_SIZE	100
+#	define ZBX_SQL_DELIMITER		";\n"
+#endif
+
+	for (i = 0; i < updates.values_num; i += ZBX_SQL_UPDATE_BATCH_SIZE)
 	{
 		sql_offset = 0;
 
-		limit = MIN(i + 100, updates.values_num);
+		limit = MIN(i + ZBX_SQL_UPDATE_BATCH_SIZE, updates.values_num);
 
+#if !defined(HAVE_ORACLE) || 0 != ZBX_MAX_OVERFLOW_SQL_SIZE
 		DBbegin_multiple_update(&sql, &sql_alloc, &sql_offset);
+#endif
 
 		for (j = i; j < limit; j++)
 		{
@@ -1479,15 +1489,17 @@ static int	am_db_flush_alert_updates(zbx_am_t *manager)
 					" set status=%d,"
 						"retries=%d,"
 						"error='%s'"
-					" where alertid=" ZBX_FS_UI64 ";\n",
+					" where alertid=" ZBX_FS_UI64 ZBX_SQL_DELIMITER,
 					update->status, update->retries, error_esc, update->alertid);
 
 			zbx_free(error_esc);
 		}
 
+#if !defined(HAVE_ORACLE) || 0 != ZBX_MAX_OVERFLOW_SQL_SIZE
 		DBend_multiple_update(&sql, &sql_alloc, &sql_offset);
+#endif
 
-		if (ZBX_DB_DOWN == DBexecute_once("%s", sql))
+		if (16 < sql_offset && ZBX_DB_DOWN == DBexecute_once("%s", sql))
 			goto cleanup;
 	}
 
